crates/swc-optimizer/core/src/snapshots/qwik_core__test__should_extract_single_qrl_with_nested_components.snap
---
source: src/test.rs
expression: output
---
=== INPUT ===
import { $, component$, useSignal, Signal } from "@qwik.dev/core";
const Foo = component$(() => {
  const data = useSignal<Signal<any>[]>([]);
  const Inner = component$((props) => {
    const data = props.data;
    return (
      <div>
        {data.value.map((item) => (
          <p onClick$={() => console.log(item.value.id)}>{item.value.id}</p>
        ))}
      </div>
    );
  });
  return <Inner data={data} />;
});

=== test.js ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_Foo_component_XXXXXXXXXXXX");
/* @__PURE__ */ componentQrl(/* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "Foo_component_XXXXXXXXXXXX"));

=== test.tsx_Foo_component_XXXXXXXXXXXX.js === (ENTRY)
import { _jsxSorted } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { useSignal } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_Foo_component_Inner_component_XXXXXXXXXXXX");
export const Foo_component_XXXXXXXXXXXX = () => {
  const data = useSignal([]);
  const Inner = /* @__PURE__ */ componentQrl(
    /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "Foo_component_Inner_component_XXXXXXXXXXXX"),
  );
  return /* @__PURE__ */ _jsxSorted(
    Inner,
    null,
    {
      data: data,
    },
    null,
    3,
    "u6_2",
  );
};

/*
{
  "origin": "test.tsx",
  "name": "Foo_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Foo_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Foo_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/

=== test.tsx_Foo_component_Inner_component_XXXXXXXXXXXX.js === (ENTRY)
import { _fnSignal } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const _hf0 = (p0) => p0.value.id;
const _hf0_str = "p0.value.id";
const i_XXXXXXXXXXXX = () =>
  import("./test.tsx_Foo_component_Inner_component_div_p_q_e_click_XXXXXXXXXXXX");
export const Foo_component_Inner_component_XXXXXXXXXXXX = (props) => {
  const data = props.data;
  const Foo_component_Inner_component_div_p_q_e_click_XXXXXXXXXXXX = /* @__PURE__ */ qrl(
    i_XXXXXXXXXXXX,
    "Foo_component_Inner_component_div_p_q_e_click_XXXXXXXXXXXX",
  );
  return /* @__PURE__ */ _jsxSorted(
    "div",
    null,
    null,
    data.value.map((item) =>
      /* @__PURE__ */ _jsxSorted(
        "p",
        {
          "q-e:click": Foo_component_Inner_component_div_p_q_e_click_XXXXXXXXXXXX,
          "q:p": item,
        },
        null,
        _fnSignal(_hf0, [item], _hf0_str),
        0,
        "u6_0",
      ),
    ),
    1,
    "u6_1",
  );
};

/*
{
  "origin": "test.tsx",
  "name": "Foo_component_Inner_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Foo_component_Inner_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Foo_component_Inner_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": "Foo_component_XXXXXXXXXXXX",
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "paramNames": [
    "props"
  ]
}
*/

=== test.tsx_Foo_component_Inner_component_div_p_q_e_click_XXXXXXXXXXXX.js === (ENTRY)
export const Foo_component_Inner_component_div_p_q_e_click_XXXXXXXXXXXX = (_, _1, item) =>
  console.log(item.value.id);

/*
{
  "origin": "test.tsx",
  "name": "Foo_component_Inner_component_div_p_q_e_click_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Foo_component_Inner_component_div_p_q_e_click",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Foo_component_Inner_component_div_p_q_e_click_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": "Foo_component_Inner_component_XXXXXXXXXXXX",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "paramNames": [
    "_",
    "_",
    "item"
  ]
}
*/

=== DIAGNOSTICS ===

[]
