crates/swc-optimizer/core/src/snapshots/qwik_core__test__should_mark_props_as_var_props_for_inner_cmp.snap
---
source: src/test.rs
expression: output
---
=== INPUT ===
import { component$, useResource$, Resource } from "@qwik.dev/core";
import { type ModelProps } from "./modelMenu";
import { serverImg } from "~/routes/(authenticated)/layout";

export const Image = component$((props) => {
  return (
    <>
      <img src={`${props.src}`} />
    </>
  );
});

export const ModelImg = component$<ModelProps>((props) => {
  const imgLoc = useResource$(async ({ track }) => {
    track(() => props.store.model);
    return await serverImg("some.png");
  });
  return (
    <>
      <Resource
        value={imgLoc}
        onRejected={() => <p>error ...</p>}
        onResolved={(res) =>
          res && (
            <>
              <Image src={res} />
            </>
          )
        }
      />
    </>
  );
});

=== test.js ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_Image_component_XXXXXXXXXXXX");
const i_XXXXXXXXXXXX = () => import("./test.tsx_ModelImg_component_XXXXXXXXXXXX");
export const Image = /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "Image_component_XXXXXXXXXXXX"),
);
export const ModelImg = /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "ModelImg_component_XXXXXXXXXXXX"),
);

=== test.tsx_Image_component_XXXXXXXXXXXX.js === (ENTRY)
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
import { _jsxSorted } from "@qwik.dev/core";
export const Image_component_XXXXXXXXXXXX = (props) => {
  return /* @__PURE__ */ _jsxSorted(
    _Fragment,
    null,
    null,
    /* @__PURE__ */ _jsxSorted(
      "img",
      {
        src: `${props.src}`,
      },
      null,
      null,
      3,
      null,
    ),
    1,
    "u6_0",
  );
};

/*
{
  "origin": "test.tsx",
  "name": "Image_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Image_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Image_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "paramNames": [
    "props"
  ]
}
*/

=== test.tsx_ModelImg_component_XXXXXXXXXXXX.js === (ENTRY)
import { Image } from "./test";
import { Resource } from "@qwik.dev/core";
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
import { _jsxSorted } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { useResourceQrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () =>
  import("./test.tsx_ModelImg_component_imgLoc_useResource_XXXXXXXXXXXX");
export const ModelImg_component_XXXXXXXXXXXX = (props) => {
  const imgLoc = useResourceQrl(
    /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "ModelImg_component_imgLoc_useResource_XXXXXXXXXXXX", [
      props,
    ]),
  );
  return /* @__PURE__ */ _jsxSorted(
    _Fragment,
    null,
    null,
    /* @__PURE__ */ _jsxSorted(
      Resource,
      null,
      {
        value: imgLoc,
        onRejected: () => /* @__PURE__ */ _jsxSorted("p", null, null, "error ...", 3, "u6_1"),
        onResolved: (res) =>
          res &&
          /* @__PURE__ */ _jsxSorted(
            _Fragment,
            null,
            null,
            /* @__PURE__ */ _jsxSorted(
              Image,
              {
                src: res,
              },
              null,
              null,
              3,
              "u6_2",
            ),
            1,
            "u6_3",
          ),
      },
      null,
      3,
      "u6_4",
    ),
    1,
    "u6_5",
  );
};

/*
{
  "origin": "test.tsx",
  "name": "ModelImg_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_ModelImg_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_ModelImg_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "paramNames": [
    "props"
  ]
}
*/

=== test.tsx_ModelImg_component_imgLoc_useResource_XXXXXXXXXXXX.js === (ENTRY)
import { _captures } from "@qwik.dev/core";
import { serverImg } from "~/routes/(authenticated)/layout";
export const ModelImg_component_imgLoc_useResource_XXXXXXXXXXXX = async (_rawProps) => {
  const props = _captures[0];
  _rawProps.track(() => props.store.model);
  return await serverImg("some.png");
};

/*
{
  "origin": "test.tsx",
  "name": "ModelImg_component_imgLoc_useResource_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_ModelImg_component_imgLoc_useResource",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_ModelImg_component_imgLoc_useResource_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": "ModelImg_component_XXXXXXXXXXXX",
  "ctxKind": "function",
  "ctxName": "useResource$",
  "captures": true,
  "paramNames": [
    "_rawProps"
  ],
  "captureNames": [
    "props"
  ]
}
*/

=== DIAGNOSTICS ===

[]
