crates/swc-optimizer/core/src/snapshots/qwik_core__test__should_move_bind_value_to_var_props.snap
---
source: src/test.rs
expression: output
---
=== INPUT ===
import { $, component$, useSignal } from "@qwik.dev/core";
import { destructureBindings } from "./destructure-bindings";

export const FieldInput = component$((props) => {
  const initialValues = { value: undefined as string | undefined };
  const rest = destructureBindings(props, initialValues);

  return (
    <input
      {...rest}
      bind:value={finalValue}
      onClick$={() => {
        console.log("clicked");
      }}
    />
  );
});

=== test.js ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_FieldInput_component_XXXXXXXXXXXX");
export const FieldInput = /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "FieldInput_component_XXXXXXXXXXXX"),
);

=== test.tsx_FieldInput_component_XXXXXXXXXXXX.js === (ENTRY)
import { _getConstProps } from "@qwik.dev/core";
import { _getVarProps } from "@qwik.dev/core";
import { _jsxSplit } from "@qwik.dev/core";
import { destructureBindings } from "./destructure-bindings";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_FieldInput_component_input_q_e_click_XXXXXXXXXXXX");
export const FieldInput_component_XXXXXXXXXXXX = (props) => {
  const initialValues = {
    value: undefined,
  };
  const rest = destructureBindings(props, initialValues);
  return /* @__PURE__ */ _jsxSplit(
    "input",
    {
      ..._getVarProps(rest),
      ..._getConstProps(rest),
      "bind:value": finalValue,
    },
    {
      "q-e:click": /* @__PURE__ */ qrl(
        i_XXXXXXXXXXXX,
        "FieldInput_component_input_q_e_click_XXXXXXXXXXXX",
      ),
    },
    null,
    0,
    "u6_0",
  );
};

/*
{
  "origin": "test.tsx",
  "name": "FieldInput_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_FieldInput_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_FieldInput_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "paramNames": [
    "props"
  ]
}
*/

=== test.tsx_FieldInput_component_input_q_e_click_XXXXXXXXXXXX.js === (ENTRY)
export const FieldInput_component_input_q_e_click_XXXXXXXXXXXX = () => {
  console.log("clicked");
};

/*
{
  "origin": "test.tsx",
  "name": "FieldInput_component_input_q_e_click_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_FieldInput_component_input_q_e_click",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_FieldInput_component_input_q_e_click_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": "FieldInput_component_XXXXXXXXXXXX",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false
}
*/

=== DIAGNOSTICS ===

[]
